--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,70 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrap {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.editor {
+  resize: none;
+  display: block;
+  width: 99.6%;
+  height: 99.3%;
+  font-family: sans-serif;
+  font-size: 1.25rem;
+  overflow: scroll;
+  overflow-x: scroll;
+  white-space: pre-line;
+}
+body {
+  overflow: hidden;
+  margin: 0;
+}
+.top-bar {
+  all: unset;
+  position: fixed;
+  background: #5c6370;
+  height: 30px;
+  text-align: center;
   color: white;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+.top-bar-move {
+  text-align: left;
+  font-family: sans-serif;
+  padding-top: 7px;
+  -webkit-app-region: drag;
+  width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-mu {
+  all: unset;
+  height: 100%;
+  width: 60px;
+}
+.btn-mu.close {
+  font-size: 26px;
+  transition: all 0.25s;
+}
+.btn-mu.close:hover,
+.btn-mu.close:active {
+  background: #c41111;
+}
+.top-bar-menu {
+  width: auto;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.btn-mu.close span {
+  cursor: context-menu;
+}
+.btn-mu.minimize,
+.btn-mu.maximize {
+  transition: all 0.25s;
+}
+.btn-mu.minimize:hover,
+.btn-mu.minimize:active,
+.btn-mu.maximize:hover,
+.btn-mu.maximize:active {
+  background: #969696;
 }
