--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   font-family: sans-serif;
   font-size: 1.25rem;
   overflow: scroll;
-  overflow-x: scroll;
   white-space: pre-line;
 }
 body {
@@ -41,6 +40,13 @@ body {
   all: unset;
   height: 100%;
   width: 60px;
+}
+.btn-mu.no-wide {
+  width: 40px;
+  transition: all 0.25s;
+}
+.btn-mu.no-wide:hover {
+  background: #969696;
 }
 .btn-mu.close {
   font-size: 26px;
